--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@videojs-player/vue": "^1.0.0",
     "bootstrap": "^5.3.2",
     "vue": "^3.4.15"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
     "sass": "^1.71.0",
+    "video.js": "^8.10.0",
     "vite": "^5.0.11"
   }
 }
